@@ -6,8 +6,10 @@ Version 1.7.0+svn:
   * Campaigns
     * Delfador's Memoirs: new portrait for Lionel.
     * The Hammer of Thursagan: new portraits for Angarthing, Ratheln.
+
   * Graphics
     * New portrait for Knight, Ghost.
+
   * Language and translations
     * Updated translations: Chinese (Traditional), Czech, French, German,
       Lithuanian, Serbian, Turkish.
@@ -19,6 +21,7 @@ Version 1.7.0+svn:
   * User interface
     * Improved the layout to take less space in certain cases.
     * Increase the lineheight in the new dialogs.
+    * The campaign dialog is redesigned.
 
   * Miscellaneous and bugfixes
     * Fixed a crash in some storyscreens.
